================================================================================
SVN $Id: ChangeLog 45058 2013-03-20 16:12:21Z jedwards $
SVN $URL: https://parallelio.googlecode.com/svn/trunk $
================================================================================
This file describes what tags were created and why
===========================
Originator: jedwards
Date: Dec 03, 2013
Model: pio
Version: pio1_8_3
One-line summary: cmake updates

M pio/cmake/TryCSizeOf.f90
M pio/cmake/TryMPISERIAL.f90
M pio/CMakeLists.txt


===========================
Originator: jedwards
Date: Nov 24, 2013
Model: pio
Version: pio1_8_2
One-line summary: fix issues with put in pnetcdf

M   pionfput_mod.F90.in
M   pionfput_mod.F90

===========================
Originator: jedwards
Date: Nov 19, 2013
Model: pio
Version: pio1_8_1
One-line summary: Fixes for problems found in the build of cesm1_3_alpha06c

  M pio_types.F90
  M pio.F90
  M nf_mod.F90



===========================
Originator: jedwards
Date: Nov 13, 2013
Model: pio
Version: pio1_8_0
One-line summary:  switch to a cmake build, updates for mira, fixes for netcdf4p

	remove all autoconf support files, add cmake support files. 
	it is currently required to run tests by hand, a cmake implimentation
	of tests is planned but incomplete.   CESM tests have been run 
	on this tag.   

===============================================================
*** You must run 'make predist' in the pio subdirectory before committing. ***

Tag name: pio1_7_2
Originator(s): Jim
Date: 05-31-2013
One-line Summary: Bug fix in calcdecomp.F90

List all subroutines eliminated:

List all subroutines added and what they do:

List all existing files that have been modified, and describe the changes:
M   Calcdecomp.F90  - only mark as converged if all iotasks are counted
M   box_rearranger.F90.in - add code to avoid an infinate loop
	
List all component tags that were used to create pio tag:
