@@ -5,6 +5,16 @@ SVN $URL: https://parallelio.googlecode.com/svn/trunk $
 This file describes what tags were created and why
 ===========================
 Originator: jedwards
+Date: Dec 06, 2013
+Model: pio
+Version: pio1_8_4
+One-line summary: added unittests - tested on yellowstone_intel and hopper_pgi - these tests must be run from an
+  interative login session
+
+A unittests/
+
+===========================
+Originator: jedwards
 Date: Dec 03, 2013
 Model: pio
 Version: pio1_8_3
